# DIMPLE

./: .gitignore  .pre-commit-config.yaml  DIMPLE.ipynb  README.md  dimple_env.yml  dimple_gui_env.yml  plan.md  pyproject.toml  requirements.txt  run_dimple.py  run_dimple_gui.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
DIMPLE/: DIMPLE.py  __init__.py  core.py  find_mutations.py  fragment_layout.py  oligo_assembly.py  outputs.py  pool.py  primers.py  qc.py  run_settings.py  runner.py  utilities.py
tests/: conftest.py  test_qc.py  test_run_settings.py  test_utilities.py
tests/data/: Kir_pair.fa
tests/expected/: Kir_DMS_Oligos.fasta  Kir_designed_variants.csv
tests/regression/: test_align_genevariation_combined.py  test_dis_pipeline_kir.py  test_dms_dis_combined_kir.py  test_dms_pipeline_kir.py  test_long_deletions_kir.py  test_make_double_kir.py
tests/unit/: test_addgene.py  test_check_overhangs.py  test_codon_usage.py  test_dimple_state_isolation.py  test_find_fragment_primer.py  test_findorf.py  test_notebook_smoke.py  test_parse_custom_mutations.py  test_qc.py  test_run_settings.py
