[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dimple"
version = "0.1.0"
description = "Deep Indel Missense Programmable Library Engineering"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "biopython==1.84",
    "numpy==1.26.4",
    "pydna==5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["DIMPLE"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "slow: regression/integration tests that take >5s",
    "interactive: tests that monkeypatch builtins.input",
]
filterwarnings = [
    "ignore::DeprecationWarning:Bio.*",
    "ignore::DeprecationWarning:pydna.*",
    "ignore:Unwanted restriction site found:UserWarning",
]

[tool.coverage.run]
source = ["DIMPLE"]
omit = ["DIMPLE/data/*", "run_dimple_gui.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
(
  \.ipynb$
)
'''

[tool.isort]
profile = "black"
line_length = 100
py_version = 312
force_single_line = false
extend_skip_glob = ["*.ipynb"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
